abbozzo l'impostazione del nav e incomincio il footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- creo il contenitore padre con larghezza e altezza in vw e vh -->
+    <div class="containermain">
+
+
+        <nav><!-- contenirtore per i bottoni top -->
+            <div class="bar-nav">
+                <div class="top-button">
+                    <button><i class="fa-solid fa-grid-horizontal"></i>speaker view</button>
+                    <button><i class="fa-solid fa-maximize"></i></button>
+                </div>
+            </div>    
+        </nav>
+
+
+        <main>
+        <!-- contenirore sexione immagini --> 
+            <div class="bar-profiles"></div>
+        </main>
+
+
+        <footer>
+        <!-- creo il contenitore per il footer -->
+            <div class="bar-footer">
+                <div class="left-footer-button"></div>
+                <div class="middle-footer-button"></div>
+                <div class="right-footer-button"></div>
+            </div>
+        </footer>
+
+        
+    </div>
+   
+
 </body>
 </html>
