creo la trutture del footer a passo a quella del main

--- a/index.html
+++ b/index.html
@@ -33,9 +33,32 @@
         <footer>
         <!-- creo il contenitore per il footer -->
             <div class="bar-footer">
-                <div class="left-footer-button"></div>
-                <div class="middle-footer-button"></div>
-                <div class="right-footer-button"></div>
+                <div class="left-footer-button">
+                    <button>
+                        <div class="bar-button-arrow">
+                            <span><i class="fa-solid fa-microphone"></i><h3>mute</h3></span>
+                            <i class="fa-solid fa-arrow-up"></i>
+                        </div>
+                    </button>
+                    <button>
+                        <div class="bar-button-arrow">
+                        <span><i class="fa-solid fa-video"></i><h3>stop video</h3></span>
+                            <i class="fa-solid fa-arrow-up"></i>
+                        </div>
+                    </button>
+
+                </div>
+                <div class="middle-footer-button">
+                    <button><i class="fa-solid fa-user-plus"></i><h3>invite</h3></button>
+                    <button><i class="fa-solid fa-user-group"></i><h3>manage partecipants</h3></button>
+                    <button><i class="fa-solid fa-chart-column"></i><h3>polling</h3></button>
+                    <button><i class="fa-solid fa-share-from-square"></i><h3>share screen</h3></button>
+                    <button><i class="fa-solid fa-comment"></i><h3>chat</h3></button>
+                    <button><i class="fa-solid fa-record-vinyl"></i><h3>record</h3></button>
+                    <button><i class="fa-sharp fa-solid fa-grid"></i><h3>breackout room</h3></button>
+                    <button><i class="fa-duotone fa-ellipsis"></i><h3>more</h3></button>
+                </div>
+                <div class="right-footer-button"><h3>End meeting</h3></div>
             </div>
         </footer>
 
