creo il contentiore delle immagini profilo con un calcolo su vh e vw

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 
         <main>
         <!-- contenirore sexione immagini --> 
-            <div class="bar-profiles"></div>
+            <div class="bar-profiles">
+                <!-- contenitore img profilo -->
+                <div class="profile-container">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="name-status">
+                        <i class="fa-solid fa-microphone-lines-slash"></i>
+                        <h3>pinco pallo</h3>
+                    </div>
+                </div>
+            </div>
         </main>
 
 
