lavoro sul nome in absolute

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,11 +30,12 @@
             <div class="bar-profiles">
                 <!-- contenitore img profilo -->
                 <div class="profile-container">
-                    <img src="https://picsum.photos/300/200" alt="">
-                    <div class="name-status">
-                        <i class="fa-solid fa-microphone-lines-slash"></i>
-                        <h3>pinco pallo</h3>
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><h3>picopallo</h3>
                     </div>
+
+                    <img src="https://picsum.photos/300/200" alt="">
+                    
+                    
                 </div>
             </div>
         </main>
