completo il main e lavoro sul footer

--- a/index.html
+++ b/index.html
@@ -30,12 +30,110 @@
             <div class="bar-profiles">
                 <!-- contenitore img profilo -->
                 <div class="profile-container">
-                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><h3>picopallo</h3>
-                    </div>
-
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
                     <img src="https://picsum.photos/300/200" alt="">
-                    
-                    
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div><div class="profile-container">
+                    <div class="name-status"><i class="fa-solid fa-microphone-lines-slash"></i><span>picopallo</span></div>
+                    <img src="https://picsum.photos/300/200" alt="">
                 </div>
             </div>
         </main>
